<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/about_dialog_layout_root"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:layout_gravity="center_horizontal">
      <TextView android:id="@+id/about_dialog_header"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:textStyle="bold"
              android:text="@string/aboutHeader"/>
      <TextView android:id="@+id/about_dialog_text"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:text="@string/aboutText"/>
      <TextView android:id="@+id/about_dialog_footer"
              android:layout_width="wrap_content"
              android:layout_height="fill_parent"
              android:text="@string/aboutFooter"/>
  
</LinearLayout>
